--- a/css/global.css
+++ b/css/global.css
@@ -15,5 +15,5 @@
     --Home-bg: url(../img/Home.jpeg);
     --Historia-bg: url(../img/História.jpeg);
     --Cultura-bg: url(../img/Cultura.jpeg);
-    --pt-bg: url(../img/PontosTuristicos.jpeg);
+    --pt-bg: url(../img/pt.bg.jpg);
 }
